--- a/src/Locale/fr/default.po
+++ b/src/Locale/fr/default.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2016-06-20 19:28+0100\n"
-"PO-Revision-Date: 2016-06-20 19:28+0100\n"
+"POT-Creation-Date: 2016-06-28 18:47+0100\n"
+"PO-Revision-Date: 2016-06-28 18:49+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: EMAIL@ADDRESS\n"
 "Language: fr\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 1.8\n"
 
-#: Controller/Admin/AdminController.php:22;23;82;83
+#: Controller/Admin/AdminController.php:22;23;151;152
 msgid "Email"
 msgstr "Email"
 
@@ -27,66 +27,130 @@ msgstr "Sujet"
 msgid "Message"
 msgstr "Message"
 
-#: Controller/Admin/AdminController.php:35 Template/Layout/admin.ctp:48
+#: Controller/Admin/AdminController.php:35 Template/Layout/admin.ctp:42
 msgid "Contacts"
 msgstr "Contacts"
 
-#: Controller/Admin/AdminController.php:41;42;63;64
+#: Controller/Admin/AdminController.php:36
+msgid "Add contact"
+msgstr "Ajouter contact"
+
+#: Controller/Admin/AdminController.php:37
+msgid "Edit contact"
+msgstr "Modifier contact"
+
+#: Controller/Admin/AdminController.php:43;44;102;103
+msgid "Parent"
+msgstr "Parent"
+
+#: Controller/Admin/AdminController.php:47;48;78;79;118;119
 msgid "Title"
 msgstr "Titre"
 
-#: Controller/Admin/AdminController.php:45;46
+#: Controller/Admin/AdminController.php:51;52;82;83
 msgid "Slug"
 msgstr "Permalien"
 
-#: Controller/Admin/AdminController.php:49;50
+#: Controller/Admin/AdminController.php:55;56
 #: Template/Admin/Settings/index.ctp:28
 msgid "Content"
 msgstr "Contenu"
 
-#: Controller/Admin/AdminController.php:54 Template/Layout/admin.ctp:45
+#: Controller/Admin/AdminController.php:59;60
+msgid "Meta description"
+msgstr "Meta description"
+
+#: Controller/Admin/AdminController.php:70 Template/Layout/admin.ctp:39
 msgid "Contents"
 msgstr "Contenus"
 
-#: Controller/Admin/AdminController.php:56
+#: Controller/Admin/AdminController.php:71
 msgid "Add content"
 msgstr "Ajouter contenu"
 
-#: Controller/Admin/AdminController.php:57
+#: Controller/Admin/AdminController.php:72
 msgid "Edit content"
 msgstr "Modifier contenu"
 
-#: Controller/Admin/AdminController.php:67;68
-msgid "Identifier"
-msgstr "Identifiant"
+#: Controller/Admin/AdminController.php:86;87;126;127
+msgid "Attributes"
+msgstr "Attributs"
 
-#: Controller/Admin/AdminController.php:72 Template/Layout/admin.ctp:46
+#: Controller/Admin/AdminController.php:94 Template/Layout/admin.ctp:40
 msgid "Menus"
 msgstr "Menus"
 
-#: Controller/Admin/AdminController.php:78;79
-msgid "Username"
-msgstr "Nom d'utilisateur"
+#: Controller/Admin/AdminController.php:95
+msgid "Add menu"
+msgstr "Ajouter menu"
 
-#: Controller/Admin/AdminController.php:86;87
-msgid "Firstname"
-msgstr "Prénom"
+#: Controller/Admin/AdminController.php:96
+msgid "Edit menu"
+msgstr "Modifier menu"
 
-#: Controller/Admin/AdminController.php:90;91
-msgid "Lastname"
-msgstr "Nom"
+#: Controller/Admin/AdminController.php:106;107
+msgid "Menu"
+msgstr "Menu"
 
-#: Controller/Admin/AdminController.php:94;95
+#: Controller/Admin/AdminController.php:110;111
+msgid "Model"
+msgstr "Modèle"
+
+#: Controller/Admin/AdminController.php:114;115
+msgid "Foreign key"
+msgstr "Clé étrangère"
+
+#: Controller/Admin/AdminController.php:122;123
+msgid "URL"
+msgstr "URL"
+
+#: Controller/Admin/AdminController.php:131
+msgid "Menu items"
+msgstr "Eléments de menu"
+
+#: Controller/Admin/AdminController.php:132
+msgid "Add menu item"
+msgstr "Ajouter élément de menu"
+
+#: Controller/Admin/AdminController.php:133
+msgid "Edit menu item"
+msgstr "Modifier élément de menu"
+
+#: Controller/Admin/AdminController.php:139;140
 msgid "Active"
 msgstr "Actif"
 
-#: Controller/Admin/AdminController.php:98;99
+#: Controller/Admin/AdminController.php:143;144
+msgid "Superuser"
+msgstr "Super utilisateur"
+
+#: Controller/Admin/AdminController.php:147;148
+msgid "Username"
+msgstr "Nom d'utilisateur"
+
+#: Controller/Admin/AdminController.php:155;156
+msgid "Firstname"
+msgstr "Prénom"
+
+#: Controller/Admin/AdminController.php:159;160
+msgid "Lastname"
+msgstr "Nom"
+
+#: Controller/Admin/AdminController.php:163;164
 msgid "Role"
 msgstr "Rôle"
 
-#: Controller/Admin/AdminController.php:102;103
-msgid "Superuser"
-msgstr "Super utilisateur"
+#: Controller/Admin/AdminController.php:168 Template/Layout/admin.ctp:41
+msgid "Users"
+msgstr "Utilisateurs"
+
+#: Controller/Admin/AdminController.php:169
+msgid "Add user"
+msgstr "Ajouter utilisateur"
+
+#: Controller/Admin/AdminController.php:170
+msgid "Edit user"
+msgstr "Modifier utilisateur"
 
 #: Controller/Admin/SettingsController.php:13
 msgid "File was saved successfully !"
@@ -96,11 +160,11 @@ msgstr "Fichier enregistré avec succès !"
 msgid "An error occured while saving file."
 msgstr "Une erreur est survenue lors de la sauvegarde du fichier."
 
-#: Template/Admin/FileManager/index.ctp:2 Template/Layout/admin.ctp:49
+#: Template/Admin/FileManager/index.ctp:2 Template/Layout/admin.ctp:43
 msgid "File manager"
 msgstr "Gestionnaire de fichiers"
 
-#: Template/Admin/Settings/index.ctp:2 Template/Layout/admin.ctp:50
+#: Template/Admin/Settings/index.ctp:2 Template/Layout/admin.ctp:44
 msgid "Settings"
 msgstr "Paramètres"
 
@@ -128,22 +192,27 @@ msgstr "Envoyer"
 msgid "{{start}} - {{end}} of {{count}}"
 msgstr "{{start}} - {{end}} de {{count}}"
 
-#: Template/Layout/admin.ctp:7;36 Template/Layout/crud-view.ctp:23
+#: Template/Layout/admin.ctp:7;26
 msgid "Administration"
 msgstr "Administration"
 
-#: Template/Layout/admin.ctp:47
-msgid "Users"
-msgstr "Utilisateurs"
+#: Template/Layout/admin.ctp:21
+msgid "Toggle navigation"
+msgstr "Basculer la navigation"
+
+#: Template/Layout/admin.ctp:30
+msgid "Logout"
+msgstr "Déconnexion"
+
+#: Template/Pages/home.ctp:2
+msgid "Homepage"
+msgstr "Page d'accueil"
+
+#~ msgid "Identifier"
+#~ msgstr "Identifiant"
 
 #~ msgid "Page {{page}} of {{pages}}, showing {{current}} records out of {{count}} total."
 #~ msgstr "Page {{page}} sur {{pages}}, affichage de {{current}} enregistrements sur un total de {{count}}."
-
-#~ msgid "Parent"
-#~ msgstr "Parent"
-
-#~ msgid "URL"
-#~ msgstr "URL"
 
 #~ msgid "Index"
 #~ msgstr "Index"
